Closed Bug 398904 Opened 18 years ago Closed 18 years ago

-compose without args opens unresizable window

Categories

(Thunderbird :: Message Compose Window, defect)

All
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: neil, Assigned: neil)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce problem: 1. %MAILNEWS_APPLICATION% /compose Expected result: resizable compose window Actual result: unresizable compose window Additional information: Works fine when argument(s) are present. This used to work in SeaMonkey before we switched to toolkit.
The problem is that the WindowWatcher's OpenWindow ignores the "all" flag if you pass in a null argument. Passing an empty string works around the problem. (MsgComposeCommands.js already ignores both a null or empty string).
Assignee: nobody → neil
Status: NEW → ASSIGNED
Attachment #283897 - Flags: superreview?(mscott)
Attachment #283897 - Flags: review?(mnyromyr)
Comment on attachment 283897 [details] [diff] [review] WindowWatcher workaround looks good Neil.
Attachment #283897 - Flags: superreview?(mscott) → superreview+
Comment on attachment 283897 [details] [diff] [review] WindowWatcher workaround Sorry, this isn't broken under Linux. I can see the problem under Windows, though - I guess/hope, you didn't give any sufficient steps to reproduce... :( AFAICS, resizing the window works only with the resizer in the lower right corner, but not by dragging the window edges. Clearing the review request, since I don't have a Windows build environment to test C++ patches, sorry.
Attachment #283897 - Flags: review?(mnyromyr)
OS: All → Windows XP
Comment on attachment 283897 [details] [diff] [review] WindowWatcher workaround Okay, I could reproduce the bug on my Mac (while you can't drag the window edges there, without this patch the resizer in the lower right corner is missing) and that the patch here is indeed working.
Attachment #283897 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: