Bug 398904 -compose without args opens unresizable window r=Mnyromyr sr=mscott